{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 18,
  "lineage": "cfcf8c4d-4c1d-52eb-836e-0d5006e00253",
  "resources": [
    {
      "module": "module.assoc-subnet-pub1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0883ca4fa9acd64c5",
            "route_table_id": "rtb-056f37d2084c6fdb5",
            "subnet_id": "subnet-0ebfe24b6aef9b989"
          },
          "dependencies": [
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_internet_gateway.igw",
            "module.vpc-test.aws_route_table.main-route-table",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub1-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:712922297422:instance/i-01dba3797bfc19692",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01dba3797bfc19692",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b5a685c67943680",
            "private_dns": "ip-10-0-0-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.123",
            "public_ip": "3.91.55.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c93973fa39f9b483",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebfe24b6aef9b989",
            "tags": {
              "Name": "pub1-ec2"
            },
            "tags_all": {
              "Name": "pub1-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0437426bcb158ea1c"
            ]
          },
          "dependencies": [
            "module.security-group-pub-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-pub-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-0437426bcb158ea1c",
            "description": "Allow HTTP , HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0437426bcb158ea1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pub-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079718b582cd5bc8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:subnet/subnet-0ebfe24b6aef9b989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebfe24b6aef9b989",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712922297422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-079718b582cd5bc8d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:internet-gateway/igw-0d0bc11621d06ec13",
            "id": "igw-0d0bc11621d06ec13",
            "owner_id": "712922297422",
            "vpc_id": "vpc-079718b582cd5bc8d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:route-table/rtb-056f37d2084c6fdb5",
            "id": "rtb-056f37d2084c6fdb5",
            "owner_id": "712922297422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0bc11621d06ec13",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_routetable"
            },
            "tags_all": {
              "Name": "public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-079718b582cd5bc8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.igw",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:vpc/vpc-079718b582cd5bc8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a570c3d7ffa6c978",
            "default_route_table_id": "rtb-03200d0e2990dba30",
            "default_security_group_id": "sg-00dbc814927b9c703",
            "dhcp_options_id": "dopt-04797476f01fbf3fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079718b582cd5bc8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03200d0e2990dba30",
            "owner_id": "712922297422",
            "tags": {
              "Name": "ivolve-project"
            },
            "tags_all": {
              "Name": "ivolve-project"
            }
          }
        }
      ]
    }
  ]
}